--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    background-color: lightgray!important;
+}
+
+div.hero-unit {
+    text-align: center;
+}
+
+div.hero-unit img {
+    width: 100%;
+    padding: 1em;
+}
