--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,8 +1,13 @@
+<a href="https://github.com/nelsonblaha/raices">
+  <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png">
+</a>
+
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-6 col-xs-offset-3">
     <div class="hero-unit">
       <h1>Familias Liberadas de Detencion</h1>
       <p>Historias de familias liberadas de los centros de detención Artesia, Karnes y Dilley.</p>
+      <%= image_tag "happy_pair.jpg" %>
       <p>
         <a class="btn btn-primary btn-large">
           Learn more
