link homepage 'learn more' button to facebook

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -9,7 +9,7 @@
       <p>Historias de familias liberadas de los centros de detención Artesia, Karnes y Dilley.</p>
       <%= image_tag "happy_pair.jpg" %>
       <p>
-        <a class="btn btn-primary btn-large">
+        <a href="https://www.facebook.com/lasfamiliasliberadas/?ref=bookmarks" class="btn btn-primary btn-large">
           Learn more
         </a>
       </p>
